Fixed acro-formation tablet layout

--- a/static/less/tablet.less
+++ b/static/less/tablet.less
@@ -396,7 +396,7 @@ button.score-btn {
             @btn-width: 2 * (99%) / (@counter + 1) - 1%;
                 width: @btn-width;
                 &:nth-child(2n) {
-                     margin: 50px (@btn-width / -2) 0 (@btn-width / -2) !important;
+                     margin: 45px (@btn-width / -2) 0 (@btn-width / -2) !important;
                 }
         }
     }
